tdf#136545 use pre-existing cairo_surface

for the cairo-canvas case which has a surface for the drawable already created.
Vaving two of them, one via cairo_xlib_surface_create and one via
cairo_xlib_surface_create_with_xrender_format both alive at the same time seems
understandably unreliable.

This aligns the gen+X11 case closer to the gtk3 case wrt the situation of
tdf#127529

Change-Id: I411649ee36fa944b77c4b09f940a059f507be2cc